problem in the STP Server
